# service-status-monitor

./: .coverage  .gitignore  .windsurfrules  App.py  README.md  pyproject.toml  requirements.txt  test.py  urls_config.toml
infra/: __main__.py  dockerfile  pyproject.toml
scripts/: app_server.py  container.py  main.py  requirements.txt  service_status_cli.py
templates/: index.html
tests/: test_config.py  test_flask.py
util/: functions
