[project]
name = "pulumi-infra"
version = "0.1.0"
description = "Pulumi infrastructure as code"
requires-python = ">=3.9"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=6.0.2,<7.0.0",
    "aws-cdk-lib>=2.0.0",
    "pulumi-aws-native>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
